<resources>
    <string name="app_name">My Application</string>
    <string name="signup">SignUp</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="i_agree_with_privacy_and_policy">I agree with privacy and policy</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="title_home">Home</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="title_inventory">Inventory</string>
    <string name="title_search">Search</string>
    <string name="title_settings">Settings</string>
    <string name="button_ja">Button JA</string>
    <string name="button_jb">Button JB</string>
    <string name="button_jc">Button JC</string>
    <string name="button_jf">Button JF</string>
    <string name="button_je">Button JE</string>
    <string name="button_jd">Button JD</string>
    <string name="all">All</string>
    <string name="nike">Nike</string>
    <string name="jordan">Jordan</string>
    <string name="adidas">Adidas</string>
    <string name="this_week_s_drops">This week\'s drops</string>
    <string name="shoes">Shoes</string>
    <string name="shoe">Shoe</string>
    <string name="nike_mind_002_light_smoke_grey">Nike Mind 002 (Light Smoke Grey)</string>
    <string name="jordan_4_undefeated_customs">Jordan 4: Undefeated Customs</string>
    <string name="live_leaderboard_scores_and_game_details">Live leaderboard scores and game details</string>
    <string name="language">Language</string>
    <string name="dark_mode">Dark mode</string>
    <string name="appearance">Appearance</string>
    <string name="use_a_darker_mode_to_reduce_glare">Use a Darker mode to reduce glare</string>
    <string name="english">English</string>
    <string name="extras">Extras</string>
    <string name="time_machine">Time Machine</string>
    <string name="discover_sneakers_released_on_a_day_in_history">Discover sneakers released on a day in history</string>
    <string name="scores_leaderboard">Scores LeaderBoard</string>
    <string name="market_data">Market Data</string>
    <string name="view_sneaker_market_trends_and_opportunities">View sneaker market trends and opportunities</string>
    <string name="sneakerheads_v1_1_0">SneakerHeads v1.1.0</string>
    <string name="made_in_tanzania_for_sneaker_heads">Made in Tanzania for sneaker heads</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">LogIn</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sneakers_owned">Sneakers Owned!</string>
    <string name="jj1">jj1</string>
    <string name="jj4">jj4</string>
    <string name="jh1">jh1</string>
    <string name="jh3">jh3</string>
    <string name="jg1">jg1</string>
    <string name="jg2">jg2</string>
</resources>