<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <HorizontalScrollView
            android:id="@+id/topHorizontalScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_ja"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ja"
                    android:scaleType="centerCrop"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/button_ja" />

                <ImageButton
                    android:id="@+id/btn_jb"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/jb"
                    android:scaleType="centerCrop"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/button_jb" />

                <ImageButton
                    android:id="@+id/btn_jc"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/jc"
                    android:scaleType="centerCrop"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/button_jc" />

                <ImageButton
                    android:id="@+id/btn_jf"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/jf"
                    android:scaleType="centerCrop"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/button_jf" />

                <ImageButton
                    android:id="@+id/btn_je"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/je"
                    android:scaleType="centerCrop"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/button_je" />

                <ImageButton
                    android:id="@+id/btn_jd"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/jd"
                    android:scaleType="centerCrop"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/button_jd" />

            </LinearLayout>
        </HorizontalScrollView>

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/topHorizontalScrollView"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nike"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@id/button3"
            app:layout_constraintStart_toEndOf="@id/button3" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jordan"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@id/button3"
            app:layout_constraintStart_toEndOf="@id/button4" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adidas"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@id/button3"
            app:layout_constraintStart_toEndOf="@id/button5" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewDrops"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            app:layout_constraintTop_toBottomOf="@id/button3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/this_week_s_drops"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/shoes"
                    android:contentDescription="@string/shoes" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewShoe1"
            android:layout_width="match_parent"
            android:layout_height="234dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            app:layout_constraintTop_toBottomOf="@id/cardViewDrops"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/shoe"
                android:src="@drawable/jb3"
                android:scaleType="centerInside" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textViewShoe1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/nike_mind_002_light_smoke_grey"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/cardViewShoe1"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewShoe2"
            android:layout_width="match_parent"
            android:layout_height="234dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            app:layout_constraintTop_toBottomOf="@id/textViewShoe1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/shoe"
                android:scaleType="centerInside"
                android:src="@drawable/jh1" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textViewShoe2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/jordan_4_undefeated_customs"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/cardViewShoe2"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewShoe3"
            android:layout_width="match_parent"
            android:layout_height="234dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            app:layout_constraintTop_toBottomOf="@id/textViewShoe2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                android:src="@drawable/jj1"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Jordan 1 (Blue mids)"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/cardViewShoe3"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewShoe4"
            android:layout_width="match_parent"
            android:layout_height="234dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            app:layout_constraintTop_toBottomOf="@id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                android:src="@drawable/jo1"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Jordan 1: Princess haze"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/cardViewShoe4"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>